--- a/API/API.csproj
+++ b/API/API.csproj
@@ -165,6 +165,7 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
     <Compile Include="Controllers\DepartmentController.cs" />
+    <Compile Include="Controllers\DivisionController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
     <Compile Include="Global.asax.cs">
@@ -174,8 +175,13 @@
     <Compile Include="Migrations\202004060718148_addmodeldept.Designer.cs">
       <DependentUpon>202004060718148_addmodeldept.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202004090331488_adddivisimodel.cs" />
+    <Compile Include="Migrations\202004090331488_adddivisimodel.Designer.cs">
+      <DependentUpon>202004090331488_adddivisimodel.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Department.cs" />
+    <Compile Include="Models\Division.cs" />
     <Compile Include="MyContext\myContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository\DepartmentRepository.cs" />
@@ -269,6 +275,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\202004060718148_addmodeldept.resx">
       <DependentUpon>202004060718148_addmodeldept.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202004090331488_adddivisimodel.resx">
+      <DependentUpon>202004090331488_adddivisimodel.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
